<resources>
    <string name="app_name">RestoRadiantRidge</string>
    <string name="menu_about">About</string>
    <string name="menu_dawson">Dawson</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sync">Sync to Back-End</string>
    <string name="greeting">Hello,</string>
    <string name="title_login">Log In</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Username (Email):</string>
    <string name="password">Password:</string>
    <string name="button_login">Log In</string>
    <string name="button_save">Save</string>
    <string name="error_empty_fields">All fields must be complete.</string>
    <string name="error_invalid_email">Please enter a valid email.</string>
    <string name="dialog_exit_title">Exit</string>
    <string name="dialog_exit_text">Are you sure you wish to leave this page?</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_GPS_title">GPS Settings</string>
    <string name="dialog_GPS_text">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings_saved">Settings have been saved.</string>
    <string name="button_lat_long">Change Lat and Long</string>
    <string name="longitude">Longitude: </string>
    <string name="latitude">Latitude: </string>
    <string name="search_city">City</string>
    <string name="search_name">Name</string>
    <string name="search_genre">Genre</string>
    <string name="button_search">Search</string>
    <string name="dialog_phone_text">This restaurant does not have a phone number.</string>
    <string name="dialog_phone_title">Call Restaurant</string>
    <!--<string name="about_menu_text">-->
        <!--This app allows you to search a database for popular restaurants.-->
        <!--You can specify a genre, specify a city (where the nearest restaurants within 50km of that location will be shown),-->
        <!--or you can search for a restaurant by name. This app also allows you to ADD a new restaurant to the database.-->
        <!--Furthermore, we even provide you with a tip calculator that you can use to find out how much of a tip you should give your waiter following-->
        <!--your visit.-->
    <!--</string>-->
    <string name="about_header">Dawson College</string>
    <string name="about_course_desc">420–518–DW</string>
    <string name="dialog_about_title">Our group</string>
    <string name="dialog_about_text">Android-PHP Project Group Members:\n\n
        Rafia Anwar\n
        Erika Bourque\n
        Victor Ruggi\n
        Alena Shulzhenko\n\n
        Fifth semester in Dawson College Computer Science Technology.</string>
    <string name="close">Close</string>
    <string name="to_main_menu">Back To Main Menu</string>
    <string name="resto_name">Enter Restaurant Name: </string>
    <string name="show_resto_name">Restaurant Name: </string>

    <string name="resto_add">Restaurant Address: </string>
    <string name="resto_num">Number: </string>
    <string name="resto_street">Street: </string>
    <string name="resto_city"> City: </string>
    <string name="resto_code"> Postal Code: </string>
    <string name="resto_genre">Restaurant Genre: </string>
    <string name="resto_phone">Phone: </string>
    <string name="resto_price">Price Range($-$$$): </string>
    <string name="resto_notes">Notes: </string>
    <string name="resto_longitude">Restaurant Longitude: </string>
    <string name="resto_latitude">Restaurant Latitude: </string>
    <string name="resto_rating">Rate the Restaurant: </string>
    <string name="show_resto_rating">Restaurant rating: </string>

    <string name="resto_save">Save: </string>
    <string name="name_error">Please enter a name </string>
    <string name="genre_error">Please enter a genre </string>
    <string name="price_error">Please enter a price range($-$$$) as (1-4) </string>
    <string name="tipAmount_error">Please enter a valid amount</string>
    <string name="code_error">Please enter a valid Postal Code </string>
    <string name="dialog_title">Confirmation Dialog! </string>
    <string name="dialog_msg">Are you sure you want to leave this page? </string>
    <string name="delete_msg">Are you sure you want to delete the restaurant from the database? </string>
    <string name="dialog_ok">Yes </string>
    <string name="dialog_no">No </string>
    <string name="button_add">Add </string>
    <string name="button_edit">Edit </string>
    <string name="button_delete">Delete </string>
    <string name="button_addReview">Add Review </string>
    <string name="button_showReview">Show Reviews </string>
    <string name="title_text">Add a title: </string>
    <string name="content_text">Add your comment:  </string>
    <string name="delete_text">Deleted! </string>
    <string name="save_text">Saved! </string>
    <string name="edit_text">Modified! </string>
    <string name="saveReview_text">Save Review! </string>
    <string name="sync_start">Starting the sync...</string>
    <string name="sync_success">The sync was successful!</string>
    <string name="sync_error">The sync failed.</string>
    <string name="sync_nodata">There are no restaurants in favourites to sync.</string>
    <string name="review_success">The review was added successfully!</string>
    <string name="review_error">The review addition failed.</string>
    <string name="duplicate_error">This restaurant is already in favourites.</string>
    <string name="net_error">Network connection error. Please, check your connection and try again.</string>
    <string name="dialog_network_title">Network Connection</string>
    <string name="dialog_network_text">No network detected, please connect and try again.</string>
    <string name="toast_no_phone">Unable to dial phone number.</string>
    <string name="title_favorites">Favorite Restaurants</string>
    <string name="title_search">Search</string>
    <string name="title_nearby">Restaurants Nearby</string>
    <string name="title_calculator">Tip Calculator</string>
    <string name="title_add_resto">Add New Favorite</string>
    <string name="title_picker">Restaurants Around Somewhere</string>
    <string name="title_add_review">Add New Review</string>
    <string name="title_show_resto">Restaurant Details</string>
    <string name="title_settings">Settings</string>
    <string name="title_lat_long">Choose Coordinates</string>
    <string name="calc_bill">Enter the bill amount:</string>
    <string name="button_calc">Calculate!</string>
    <string name="calc_title">Tip Calculator</string>
    <string name="calc_10">10%</string>
    <string name="calc_15">15%</string>
    <string name="calc_20">20%</string>
    <string name="calc_tip">Amount of tip is: </string>
    <string name="calc_total">Total amount is: </string>
</resources>