<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_resto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.radiantridge.restoradiantridge.activities.AddRestoActivity"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_resto"
        style="@style/titleStyle"
        android:textColor="@color/add"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textRestoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resto_name"
                style="@style/formStyle"/>
            <EditText
                android:id="@+id/editRestoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                style="@style/editText"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textNameError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_error"
                android:textColor="@color/colorAccent"
                android:visibility="invisible"
                android:layout_span="2"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textRestoAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resto_add"
                style="@style/formStyle" />
            <EditText
                android:id="@+id/editAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                style="@style/editText"
                android:lines="3"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textAddressError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre_error"
                android:textColor="@color/colorAccent"
                android:visibility="invisible"
                android:layout_span="2"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resto_phone"
                style="@style/formStyle" />
            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                style="@style/editText"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resto_genre"
                style="@style/formStyle" />
            <EditText
                android:id="@+id/editGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                style="@style/editText"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textGenreError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre_error"
                android:textColor="@color/colorAccent"
                android:visibility="invisible"
                android:layout_span="2"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resto_price"
                style="@style/formStyle" />
            <EditText
                android:id="@+id/editPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                style="@style/editText"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textPriceError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_error"
                android:textColor="@color/colorAccent"
                android:visibility="invisible"
                android:layout_span="2"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resto_notes"
                style="@style/formStyle" />
            <EditText
                android:id="@+id/editNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                style="@style/editText"
                android:lines="3"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resto_longitude"
                style="@style/formStyle" />
            <EditText
                android:id="@+id/editLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                style="@style/editText"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resto_latitude"
                style="@style/formStyle" />
            <EditText
                android:id="@+id/editLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                style="@style/editText"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resto_rating"
                style="@style/formStyle" />
            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:isIndicator="false"
                android:numStars="5"
                android:background="@color/add"/>
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveResto"
        android:text="@string/button_save" />
</LinearLayout>
