<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.radiantridge.restoradiantridge.activities.SettingsActivity">

    <TextView
        style="@style/titleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textColor="@color/text" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow android:layout_margin="5dp">

            <TextView
                style="@style/formStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/settings_fname_et"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow android:layout_margin="5dp">

            <TextView
                style="@style/formStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/settings_lname_et"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow android:layout_margin="5dp">

            <TextView
                style="@style/formStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/email" />

            <EditText
                android:id="@+id/settings_email_et"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow android:layout_margin="5dp">

            <TextView
                style="@style/formStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/password" />

            <EditText
                android:id="@+id/settings_pw_et"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>

    <Button
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:text="@string/button_save" />
</LinearLayout>
