<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.radiantridge.restoradiantridge.activities.MainActivity"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:text="@string/title_login"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/titleStyle"
        android:textColor="@color/text"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:text="@string/first_name"
                style="@style/formStyle"
                android:layout_weight="1"
                android:layout_width="0dp"/>
            <EditText
                android:id="@+id/login_fname_et"
                style="@style/editText"
                android:layout_weight="1"
                android:layout_width="0dp"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:text="@string/last_name"
                style="@style/formStyle"
                android:layout_weight="1"
                android:layout_width="0dp"/>
            <EditText
                android:id="@+id/login_lname_et"
                style="@style/editText"
                android:layout_weight="1"
                android:layout_width="0dp"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:text="@string/email"
                style="@style/formStyle"
                android:layout_weight="1"
                android:layout_width="0dp"/>
            <EditText
                android:id="@+id/login_email_et"
                style="@style/editText"
                android:layout_weight="1"
                android:layout_width="0dp"/>
        </TableRow>
        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:text="@string/password"
                style="@style/formStyle"
                android:layout_weight="1"
                android:layout_width="0dp"/>
            <EditText
                android:id="@+id/login_pw_et"
                android:inputType="textPassword"
                style="@style/editText"
                android:layout_weight="1"
                android:layout_width="0dp"/>
        </TableRow>
    </TableLayout>
    <Button
        android:text="@string/button_login"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="login"
        style="@style/buttonStyle"/>

</LinearLayout>