<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lat_long"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.radiantridge.restoradiantridge.activities.LatLongActivity">

    <TextView
        style="@style/titleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_lat_long"
        android:textColor="@color/red" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow android:layout_margin="5dp">

            <TextView
                style="@style/formStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/latitude" />

            <EditText
                android:id="@+id/latitude_ET"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="numberDecimal|numberSigned" />
        </TableRow>

        <TableRow android:layout_margin="5dp">

            <TextView
                style="@style/formStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/longitude" />

            <EditText
                android:id="@+id/longitude_ET"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="numberDecimal|numberSigned" />
        </TableRow>
    </TableLayout>

    <Button
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:text="@string/button_save" />

</LinearLayout>
