<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_review"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.radiantridge.restoradiantridge.activities.AddReviewActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/title_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/textTitle"
                android:layout_span="1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTitle"
                android:layout_span="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textContent" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editContent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:id="@+id/ratingBarReview" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/saveReview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleSaveReview"
                android:id="@+id/btnSaveReview" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
